show spacing fixed + btn green

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -14,7 +14,7 @@
 
   .card-product img {
     height: 70%;
-    width: 70%;
+    width: 100%;
     object-fit: cover;
     margin-top: 10px;
   }
@@ -57,11 +57,9 @@
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     display: flex;
     align-items: center;
-    position: relative;
-    right: -500px;
-    top: -300px;
     background-color: $darker-green;
     border-radius: 6px;
+    width: 100%;
   }
 
   .card-product-infos .wrap-name {
@@ -70,20 +68,21 @@
   }
 
   .description {
-    position: relative;
-    right: -50px;
     color: black;
     overflow: hidden;
-    padding: 50px 50px;
+    padding: 20px 20px;
     width: 600px;
     background: $darker-green;
     border-radius: 6px 6px;
     box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    width: 100%;
     p {
-      position: absolute;
-      text-align: left;
+      // position: absolute;
+      // text-align: left;
+      // justify-content: center;
       bottom: 10px;
-      opacity: .7;
+      left: 10px;
+      opacity: 0.7;
     }
   }
 
@@ -93,6 +92,13 @@
 
   #map {
     border: 3px solid black;
+    background-color: black;
     border-radius: 8px;
-    bottom: -50px;
+    bottom: -20px;
+  }
+
+  .btn-success {
+    border: 3px solid $leafy-green;
+    background-color: $bright-green;
+    color: $leafy-green;
   }
